test/visibility/except/preventsFind.good
preventsFind.chpl:12: In function 'main':
preventsFind.chpl:13: error: 'b' undeclared (first use this function)
